All user operations API
